--- a/src/glade/Makefile.am
+++ b/src/glade/Makefile.am
@@ -1,6 +1,8 @@
 gladedir = $(datadir)/lingot/glade/
 
 glade_DATA =                            \
-	lingot-config-dialog.glade
+	lingot-config-dialog.glade\
+	lingot-mainframe.glade
+	
 
 EXTRA_DIST = $(glade_DATA) 
