--- a/configure.in
+++ b/configure.in
@@ -69,6 +69,27 @@ if test "x$usejack" = "xyes"; then
 	CFLAGS="$CFLAGS -DJACK"
 fi
 
+usepulseaudio=yes
+
+AC_ARG_ENABLE(
+  pulseaudio,
+  AC_HELP_STRING([--enable-pulseaudio], [use PULSEAUDIO @<:@default=yes@:>@]),
+  [
+    if test "x$enableval" = "xno"; then
+      usepulseaudio=no
+    fi
+  ])
+
+AM_CONDITIONAL(HAVE_PULSEAUDIO, test "x$usepulseaudio" = "xyes")
+
+if test "x$usepulseaudio" = "xyes"; then
+ 	PKG_CHECK_MODULES(PULSEAUDIO, libpulse-simple >= 0.9.10)
+	dnl	PKG_CHECK_MODULES(PULSEAUDIO, pulseaudio >= 0.9.10)
+	AC_SUBST(PULSEAUDIO_CFLAGS)
+	AC_SUBST(PULSEAUDIO_LIBS)
+	CFLAGS="$CFLAGS -DPULSEAUDIO"
+fi
+
 
 PKG_CHECK_MODULES([GLADE], [libglade-2.0])
 AC_SUBST(GLADE_CFLAGS)
