--- a/Makefile.in
+++ b/Makefile.in
@@ -182,6 +182,8 @@ JACK_CFLAGS = @JACK_CFLAGS@
 JACK_LIBS = @JACK_LIBS@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
+LIBFFTW_CFLAGS = @LIBFFTW_CFLAGS@
+LIBFFTW_LIBS = @LIBFFTW_LIBS@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
