changes after distribution check fail

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -12,6 +12,7 @@ src/lingot-audio.c
 src/lingot-audio-oss.c
 src/lingot-audio-alsa.c
 src/lingot-audio-jack.c
+src/lingot-audio-pulseaudio.c
 src/lingot-config.c
 src/lingot-config-scale.c
 src/lingot-core.c
