--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -1,9 +1,10 @@
-#Mon Oct 18 22:25:16 CEST 2010
 eclipse.preferences.version=1
 indexer/filesToParseUpFront=
 indexer/indexAllFiles=false
+indexer/indexOnOpen=false
 indexer/indexUnusedHeadersWithDefaultLang=false
 indexer/indexerId=org.eclipse.cdt.core.fastIndexer
+indexer/skipFilesLargerThanMB=8
 indexer/skipImplicitReferences=false
 indexer/skipMacroReferences=false
 indexer/skipReferences=false
