--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -225,6 +225,8 @@ NO_PREFIX_PACKAGE_MENU_DIR = @NO_PREFIX_PACKAGE_MENU_DIR@
 NO_PREFIX_PACKAGE_PIXMAPS_DIR = @NO_PREFIX_PACKAGE_PIXMAPS_DIR@
 OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
+OSS_CFLAGS = @OSS_CFLAGS@
+OSS_LIBS = @OSS_LIBS@
 OTOOL = @OTOOL@
 OTOOL64 = @OTOOL64@
 PACKAGE = @PACKAGE@
