--- a/.cproject
+++ b/.cproject
@@ -27,10 +27,9 @@
 									<listOptionValue builtIn="false" value="ALSA"/>
 									<listOptionValue builtIn="false" value="DRAW_MARKERS"/>
 									<listOptionValue builtIn="false" value="DEFAULT_AUDIO_SYSTEM_ALSA"/>
+									<listOptionValue builtIn="false" value="OSS=1"/>
 								</option>
-								<option id="gnu.c.compiler.option.preprocessor.undef.symbol.2030930612" superClass="gnu.c.compiler.option.preprocessor.undef.symbol" valueType="undefDefinedSymbols">
-									<listOptionValue builtIn="false" value="SEIN"/>
-								</option>
+								<option id="gnu.c.compiler.option.preprocessor.undef.symbol.2030930612" name="Undefined symbols (-U)" superClass="gnu.c.compiler.option.preprocessor.undef.symbol" valueType="undefDefinedSymbols"/>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.536031661" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.linker.base.745812659" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.base">
